--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "hoek": "^5.0.3",
     "react": "16.3.1",
     "react-native": "0.55.4",
-    "react-native-popup-dialog": "^0.14.48",
+    "react-native-popup-dialog": "^0.14.50",
     "react-native-swipeout": "^2.3.3",
     "react-native-video": "^3.0.0",
-    "react-navigation": "^2.5.2",
-    "realm": "^2.8.4"
+    "react-navigation": "^2.5.5",
+    "realm": "^2.12.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
